Fix for content block being truncated on narrow windows

--- a/static/css/voidybootstrap.css
+++ b/static/css/voidybootstrap.css
@@ -20,6 +20,8 @@ img
 #content
 {
     line-height: 26px;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 #content p
